Show full sized map modal on smaller screens

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -87,3 +87,9 @@ div.dropdown>.btn.show+.dropdown-menu {
 .tag-filter-tags-container {
     left: 30px;
 }
+
+@media (min-width: 992px) {
+    .map-modal {
+        height: 80%;
+    }
+}
