--- a/app/templates/upload/_gallery.html
+++ b/app/templates/upload/_gallery.html
@@ -5,7 +5,7 @@
     <div class="card-header">
         {{ _('Gallery') }}
     </div>
-    <div class="card-body row">
+    <div class="card-body row gallery">
         {% for image in object.uploads %}
             {% if image.type.name in ('PHOTO', 'HISTORICAL_PHOTO') and not image == object.photo %}
             <div class="col-sm-6 col-xl-4">
@@ -16,7 +16,6 @@
                     </div>
 
                     <a href="{{ Url.get('upload.get', path=image.path) }}"
-                       data-toggle="lightbox" data-gallery="photo-gallery"
                        data-caption="<b>{{ image.created_by }}: {{ image.name }}</b>{% if image.description %}<br>{{ image.description }}{% endif %}" >
                         <img src="{{ Url.get('upload.get', path=image.thumbnail) }}" alt="{{ image.name }}" style="width: 100%; height: 200px; object-fit: cover;">
                         <div class="image-caption d-flex justify-content-between">
