--- a/app/templates/_private.html
+++ b/app/templates/_private.html
@@ -62,7 +62,7 @@
     <nav class="scrollable-content collapse d-md-block bg-light p-2 col-md-2" id="collapsibleMenu">
         {% include '_menu.html' %}
     </nav>
-    <div class="col-sm-12 col-md-10 p-3">
+    <div class="col-sm-12 col-md-10 p-sm-1 p-md-3">
         {% block content %}
         {% endblock %}
     </div>
