Fixed geofond photo path

--- a/app/templates/location/location.html
+++ b/app/templates/location/location.html
@@ -121,7 +121,7 @@
             </div>
             <div class="list-group list-group-flush">
                 {% if location.underground.geofond_id %}
-                <a href="https://app.geology.cz/dud/php/foto_dd.php?id_={{ location.underground.geofond_id }}" class="list-group-item list-group-item-action">
+                <a href="https://app.geology.cz/dud_foto/foto_dd.php?id_={{ location.underground.geofond_id }}" class="list-group-item list-group-item-action">
                     <strong>{{ _('Geofond - photos') }}</strong>
                 </a>
                 <a href="https://mapy.geology.cz/dulni_dila_poddolovani/?query=dulni_dila_4034_0%2Cid_dd%2C{{ location.underground.geofond_id }}" class="list-group-item list-group-item-action">
