Added bigger images as location placeholder and page logo

--- a/app/templates/category/category.html
+++ b/app/templates/category/category.html
@@ -50,7 +50,7 @@
                 <img class="card-img-top" src="{{ Url.get('upload.get', path=category.photo.thumbnail) }}" alt="Category title image">
             </a>
             {% else %}
-            <img class="card-img-top" src="{{ Url.get('static', filename='images/favicon.ico') }}" alt="Category title image">
+            <img class="card-img-top" src="{{ Url.get('static', filename='images/location_placeholder.png') }}" alt="Category title image">
             {% endif %}
 
             <div class="card-body">
