--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -31,7 +31,7 @@
 </div>
 
 <form method="POST" action="" role="form">
-    <img class="mb-2" src="{{ Url.get('static', filename='images/favicon.ico') }}" alt="">
+    <img class="mb-2" src="{{ Url.get('static', filename='images/logo.png') }}" alt="" style="height: 150px">
     <h1 class="mb-3 fw-bold">{{ _('Hidden places') }}</h1>
     <h3 class="mb-3 fw-bold">{{ title }}</h3>
 
