--- a/app/templates/_private.html
+++ b/app/templates/_private.html
@@ -7,7 +7,7 @@
         <i class="bi bi-list h4"></i>
     </button>
     <a href="{{ Url.get('location.browse') }}" class="link-dark text-decoration-none h3 justify-content-center align-items-center d-none d-md-flex">
-        <img class="mr-2" style="height: 40px" src="{{ Url.get('static', filename='images/favicon.ico') }}" alt="">
+        <img class="mr-2" style="height: 40px" src="{{ Url.get('static', filename='images/logo.png') }}" alt="">
         {{ _('HiddenPlaces') }}
     </a>
 
