--- a/app/templates/location/_browse_item.html
+++ b/app/templates/location/_browse_item.html
@@ -2,7 +2,7 @@
     <div class="card h-100 shadow{% if not location.published %} bg-warning{% endif %}">
         <a href="{{ Url.get('location.show', location_id=location.id) }}" class="stretched-link"></a>
 
-        {% set image_url = Url.get('static', filename='images/favicon.ico') %}
+        {% set image_url = Url.get('static', filename='images/location_placeholder.png') %}
         {% if location.photo %}
             {% set image_url = Url.get('upload.get', path=location.photo.thumbnail) %}
         {% endif %}
