--- a/app/templates/location/_metadata.html
+++ b/app/templates/location/_metadata.html
@@ -12,7 +12,10 @@
     <div class="card-body">
         {{ _('Created') }}: {{ location.created.date() }}<br>
         {{ _('Last updated') }}: {{ location.modified.date() }}<br>
-        {{ _('Maintainer') }}: <a href="{{ Url.get('user.profile', user_id=location.owner_id) }}">{{ location.owner }}</a><br>
+
+        {% if current_user.has_moderator_rights() %}
+            {{ _('Maintainer') }}: <a href="{{ Url.get('user.profile', user_id=location.owner_id) }}">{{ location.owner }}</a><br>
+        {% endif %}
 
         {% if location.underground %}
             <hr>
