--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -27,8 +27,11 @@ body {
     z-index: 100;
 }
 
-.control-hide {
-    visibility: hidden;
+/* Hiden controls only on devices with mouse, show on touchscreens */
+@media(pointer:fine) {
+    .control-hide {
+        visibility: hidden;
+    }
 }
 
 .control-hover:hover .control-hide {
