--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -6,9 +6,13 @@
 <div class="row">
     <div class="col">
         <div class="text-end m-3">
-            {{ link_button(_('Send message'), Url.get('message.write', user_id=user.id), color='outline-primary') }}
-            {{ link_button(_('Edit'), Url.for_return('user.edit'), color='outline-success') }}
-            {{ link_button(_('Change password'), Url.for_return('user.change_password'), color='outline-success') }}
+            {% if user == current_user %}
+                {{ link_button(_('Edit'), Url.for_return('user.edit'), color='outline-success') }}
+                {{ link_button(_('Change email'), Url.for_return('user.change_email'), color='outline-warning') }}
+                {{ link_button(_('Change password'), Url.for_return('user.change_password'), color='outline-success') }}
+            {% else %}
+                {{ link_button(_('Send message'), Url.get('message.write', user_id=user.id), color='outline-primary') }}
+            {% endif %}
             <!-- Admin section -->
             {{ link_button(_('Ban'), Url.for_return('user.ban', user_id=user.id), color='outline-danger') }}
             {{ link_button(_('Set role'), Url.for_return('user.role', user_id=user.id), color='outline-danger') }}
